--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ h4{
 
 .header i
 {
-	font-size: 35px;
+	font-size: 37px;
 	margin: 10px;
 
 }
@@ -132,44 +132,105 @@ h4{
 
 /*section2 About Me*/
 
-
-.pic img {
-	width: 30%;
-	height: 30%;
-  /*width: 100%;
-  height: auto;*/
-  margin-left: 87%;
-  border-radius: 50%;
-
-}
-
 .about
 {
-	margin-top: -50px;
-	background-image:url(../img/paper.jpg);
-	background-position: center center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-attachment: fixed;
-	width: 100%;
+
+/*background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../img/7.jpg);
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+background-attachment: fixed;
+*/
+
+margin-top: -50px;
 
 }
+
+img
+{
+
+height: auto;
+width: 75%;
+margin: 0px;
+float:right ;
+object-position: right;
+margin-right: -70px;
+opacity: 0.6;
+
+}
+
+.about p
+{
+	text-align: left;
+	font-size: 20px;
+	margin-top: 40px;
+}
+
 
 .about h1
 {
-	opacity: 0.5;
-	font-size: 50px;
-	padding-top: 50px;
+	text-decoration: underline solid #e03131;
 	
+
 }
 
-.dl-horizontal
-{
-	font-size: 20px;
+
+
+/*Media*/
+
+@media(max-width: 768px){
+
+	.header{
+		width: 100%;
+		height: 500px;
+	}
+
+	.header h2{
+	margin-top: 80%;
+	float: right;
 	opacity: 0.5;
-	margin-top: 20px;
-}
+	color: #C62828;
+	font-size: 25px;
 
+	}
+
+	.header i
+	{
+	font-size: 25px;
+	margin: 10px;
+
+	}
+
+	.about
+	{
+		margin-top: -50px;
+	}
+
+	img
+	{
+
+	height: auto;
+	width: 60%;
+	margin-top: -30px;
+	/*float:right ;
+	object-position: right;*/
+	margin-right: -15px;
+	opacity: 0.6;
+	}
+
+	.about p
+	{
+		text-align: justify;
+		font-size: 12px;
+		margin-top: 20px;
+	}
+
+	.about h1
+	{
+		font-size: 15px;
+
+	}
+}
 
 
 
